--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,4 +22,14 @@
       @apply relative font-semibold text-white transition-colors duration-200 after:absolute after:-bottom-1 after:left-0 after:h-0.5 after:w-full after:bg-primary-yellow after:ease-in-out hover:text-primary-yellow;
     }
   }
+
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
